--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: theme(colors.gray.950);
+  --foreground: white;
+  --primary: theme(colors.blue.950);
+  --placeholder: theme(colors.gray.800);
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
